Fix more misc compiler warnings, late October 2022 edition https://bugs.webkit.org/show_bug.cgi?id=246861

Reviewed by Don Olmstead.

* Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp: Fix -Wunused-variable
  warning.
* Source/JavaScriptCore/dfg/DFGSpeculativeJIT32_64.cpp:
(JSC::DFG::SpeculativeJIT::emitCall): Fix -Wunused-variable warning.
* Source/JavaScriptCore/jit/GCAwareJITStubRoutine.cpp: Fix scary
  -Wsequence-point warnings. At first I thought that a caller might be
calling this unfunction in a way such that execution order is undefined.
However, I checked the callsites and they all seem OK.
(JSC::GCAwareJITStubRoutine::observeZeroRefCountImpl):
(JSC::GCAwareJITStubRoutine::deleteFromGC):
* Source/JavaScriptCore/parser/Lexer.cpp: Suppress
  -Wunused-but-set-variable. Annoyingly, this has to go around the
entire function because limiting it to just the statement that triggers
the warning introduces a bogus -Wreturn-type warning complaining that
the function does not return a value, even though it always does.
* Source/ThirdParty/capstone/CMakeLists.txt: Suppress -Wcast-align,
  which should be dealt with upstream.
* Source/WebCore/Modules/mediastream/SFrameUtils.cpp:
(WebCore::computeH264PrefixBuffer): I'm a little concerned that it might
theoretically be possible to overflow this, so I reported bug #246862.
Suppress it for now.
* Source/WebCore/crypto/openssl/OpenSSLCryptoUniquePtr.h: These are just
  deprecations that we cannot deal with until we've decided what to do
about BoringSSL and LibreSSL. Suppress them.
* Source/WebCore/platform/VideoPixelFormat.cpp:
(WebCore::convertVideoFramePixelFormat): Fix -Wunused-variable warning.

Canonical link: https://commits.webkit.org/255855@main