Source/JavaScriptCore/dfg/DFGSpeculativeJIT.cpp
@@ -9742,9 +9742,10 @@ void SpeculativeJIT::compileNewArray(Node* node)
 void SpeculativeJIT::compileNewArrayWithSpread(Node* node)
 {
     ASSERT(node->op() == NewArrayWithSpread);
-    JSGlobalObject* globalObject = m_graph.globalObjectFor(node->origin.semantic);
 
 #if USE(JSVALUE64)
+    JSGlobalObject* globalObject = m_graph.globalObjectFor(node->origin.semantic);
+
     if (m_graph.isWatchingHavingABadTimeWatchpoint(node)) {
         GPRTemporary result(this);
         GPRReg resultGPR = result.gpr();
